# rebloxed

./: LICENSE  README.md  TOS.md  package-lock.json  package.json  test.py  tos.md
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: auth.rs  mod.rs  play.rs  user.rs
src-tauri/src/core/: auth.rs  data.rs  mod.rs  play.rs  watcher.rs
src-tauri/src/mapping/: discovery.rs  economy.rs  friends.rs  game.rs  mod.rs  search.rs  user.rs
src/components/: FriendsCarousel.tsx  FriendsModal.tsx  GameCarousel.tsx  GameDetails.tsx  GameModal.tsx  UserProfileDetails.tsx
src/components/Game/: GameCarousel.tsx  GameDetails.tsx  GameGallery.tsx  GameModal.tsx
src/components/Group/: GroupDetails.tsx  GroupModal.tsx
src/components/Home/: Dashboard.tsx  Discovery.tsx  FriendsCarousel.tsx  GameCarousel.tsx  Topbar.tsx
src/components/User/: FriendsCarousel.tsx  UserProfileDetails.tsx  UserProfileModal.tsx
src/components/greet/: Welcome.tsx
src/components/misc/: BlurContext.tsx  Dropdown.tsx  Linkify.tsx  Search.tsx  popup.tsx
src/styles/: base.css  buttons.css  cards.css  carousel.css  modals.css  navigation.css  popups.css  variables.css  welcome.css
