[package]
name = "roblox-but-better"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "roblox_but_better_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2.0.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["cookies", "json", "rustls"] }
aes-gcm = "0.10.3"  
rand = "0.10.0"  
tauri-plugin-keyring = "0.1.0"
tauri-plugin-log = "2"
anyhow = "1.0"
ro-rs = "0.1.1"
